scanner/dw_scanner.go

// line 1 "scanner/dw_scanner.rl"
// This file is automatically generated by ragel. Do not change.
// A tested version of ragel is 6.8.
// Build with `ragel -o scanner/dw_scanner.go -Z -G0 scanner/dw_scanner.rl`

package scanner

var (
	ts, te, act int
)

func parseDoc(data []byte, c chan item) {
	
	cs, p, pe, eof := 0, 0, len(data), len(data)


// line 19 "scanner/dw_scanner.go"
var _dw2md_actions []byte = []byte{
	0, 1, 0, 1, 1, 1, 2, 1, 3, 
	1, 4, 1, 5, 1, 6, 1, 7, 
	1, 8, 1, 9, 1, 10, 1, 11, 
	1, 12, 1, 13, 1, 14, 1, 15, 
	1, 16, 1, 17, 1, 18, 1, 19, 
	1, 20, 
}

var _dw2md_to_state_actions []byte = []byte{
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 1, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
}

var _dw2md_from_state_actions []byte = []byte{
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
	0, 0, 0, 0, 0, 3, 0, 0, 
	0, 0, 0, 0, 0, 0, 0, 0, 
}

const dw2md_start int = 29
const dw2md_first_final int = 29
const dw2md_error int = -1

const dw2md_en_main int = 29


// line 52 "scanner/dw_scanner.go"
	{
	cs = dw2md_start
	ts = 0
	te = 0
	act = 0
	}

// line 60 "scanner/dw_scanner.go"
	{
	var _acts int
	var _nacts uint

	if p == pe {
		goto _test_eof
	}
_resume:
	_acts = int(_dw2md_from_state_actions[cs])
	_nacts = uint(_dw2md_actions[_acts]); _acts++
	for ; _nacts > 0; _nacts-- {
		_acts++
		switch _dw2md_actions[_acts - 1] {
		case 1:
// line 1 "NONE"

ts = p

// line 79 "scanner/dw_scanner.go"
		}
	}

	switch cs {
	case 29:
		switch data[p] {
		case 39:
			goto tr33;
		case 42:
			goto tr34;
		case 47:
			goto tr35;
		case 60:
			goto tr36;
		case 61:
			goto tr37;
		case 95:
			goto tr38;
		}
		goto tr32;
	case 30:
		if data[p] == 39 {
			goto tr40;
		}
		goto tr39;
	case 31:
		if data[p] == 42 {
			goto tr41;
		}
		goto tr39;
	case 32:
		if data[p] == 47 {
			goto tr42;
		}
		goto tr39;
	case 33:
		switch data[p] {
		case 47:
			goto tr43;
		case 99:
			goto tr44;
		case 100:
			goto tr45;
		case 102:
			goto tr46;
		}
		goto tr39;
	case 0:
		switch data[p] {
		case 99:
			goto tr1;
		case 100:
			goto tr2;
		case 102:
			goto tr3;
		}
		goto tr0;
	case 1:
		if data[p] == 111 {
			goto tr4;
		}
		goto tr0;
	case 2:
		if data[p] == 100 {
			goto tr5;
		}
		goto tr0;
	case 3:
		if data[p] == 101 {
			goto tr6;
		}
		goto tr0;
	case 4:
		if data[p] == 62 {
			goto tr7;
		}
		goto tr0;
	case 5:
		if data[p] == 101 {
			goto tr8;
		}
		goto tr0;
	case 6:
		if data[p] == 108 {
			goto tr9;
		}
		goto tr0;
	case 7:
		if data[p] == 62 {
			goto tr10;
		}
		goto tr0;
	case 8:
		if data[p] == 105 {
			goto tr11;
		}
		goto tr0;
	case 9:
		if data[p] == 108 {
			goto tr12;
		}
		goto tr0;
	case 10:
		if data[p] == 101 {
			goto tr13;
		}
		goto tr0;
	case 11:
		if data[p] == 62 {
			goto tr14;
		}
		goto tr0;
	case 12:
		if data[p] == 111 {
			goto tr15;
		}
		goto tr0;
	case 13:
		if data[p] == 100 {
			goto tr16;
		}
		goto tr0;
	case 14:
		if data[p] == 101 {
			goto tr17;
		}
		goto tr0;
	case 15:
		switch data[p] {
		case 32:
			goto tr18;
		case 62:
			goto tr19;
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto tr18;
		}
		goto tr0;
	case 16:
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr20;
			}
		case data[p] >= 65:
			goto tr20;
		}
		goto tr0;
	case 17:
		if data[p] == 62 {
			goto tr19;
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr20;
			}
		case data[p] >= 65:
			goto tr20;
		}
		goto tr0;
	case 18:
		if data[p] == 101 {
			goto tr21;
		}
		goto tr0;
	case 19:
		if data[p] == 108 {
			goto tr22;
		}
		goto tr0;
	case 20:
		if data[p] == 62 {
			goto tr23;
		}
		goto tr0;
	case 21:
		if data[p] == 105 {
			goto tr24;
		}
		goto tr0;
	case 22:
		if data[p] == 108 {
			goto tr25;
		}
		goto tr0;
	case 23:
		if data[p] == 101 {
			goto tr26;
		}
		goto tr0;
	case 24:
		switch data[p] {
		case 32:
			goto tr27;
		case 62:
			goto tr28;
		}
		if 9 <= data[p] && data[p] <= 13 {
			goto tr27;
		}
		goto tr0;
	case 25:
		if data[p] == 46 {
			goto tr29;
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr29;
			}
		case data[p] >= 65:
			goto tr29;
		}
		goto tr0;
	case 26:
		switch data[p] {
		case 32:
			goto tr30;
		case 46:
			goto tr29;
		case 62:
			goto tr28;
		}
		switch {
		case data[p] < 65:
			if 9 <= data[p] && data[p] <= 13 {
				goto tr30;
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr29;
			}
		default:
			goto tr29;
		}
		goto tr0;
	case 27:
		if data[p] == 46 {
			goto tr31;
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr31;
			}
		case data[p] >= 65:
			goto tr31;
		}
		goto tr0;
	case 28:
		switch data[p] {
		case 46:
			goto tr31;
		case 62:
			goto tr28;
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr31;
			}
		case data[p] >= 65:
			goto tr31;
		}
		goto tr0;
	case 34:
		if data[p] == 61 {
			goto tr47;
		}
		goto tr39;
	case 35:
		if data[p] == 61 {
			goto tr49;
		}
		goto tr48;
	case 36:
		if data[p] == 61 {
			goto tr51;
		}
		goto tr50;
	case 37:
		if data[p] == 61 {
			goto tr53;
		}
		goto tr52;
	case 38:
		if data[p] == 61 {
			goto tr55;
		}
		goto tr54;
	case 39:
		if data[p] == 95 {
			goto tr56;
		}
		goto tr39;
	}

	tr43: cs = 0; goto _again
	tr1: cs = 1; goto _again
	tr4: cs = 2; goto _again
	tr5: cs = 3; goto _again
	tr6: cs = 4; goto _again
	tr2: cs = 5; goto _again
	tr8: cs = 6; goto _again
	tr9: cs = 7; goto _again
	tr3: cs = 8; goto _again
	tr11: cs = 9; goto _again
	tr12: cs = 10; goto _again
	tr13: cs = 11; goto _again
	tr44: cs = 12; goto _again
	tr15: cs = 13; goto _again
	tr16: cs = 14; goto _again
	tr17: cs = 15; goto _again
	tr18: cs = 16; goto _again
	tr20: cs = 17; goto _again
	tr45: cs = 18; goto _again
	tr21: cs = 19; goto _again
	tr22: cs = 20; goto _again
	tr46: cs = 21; goto _again
	tr24: cs = 22; goto _again
	tr25: cs = 23; goto _again
	tr26: cs = 24; goto _again
	tr27: cs = 25; goto _again
	tr29: cs = 26; goto _again
	tr30: cs = 27; goto _again
	tr31: cs = 28; goto _again
	tr0: cs = 29; goto f0
	tr7: cs = 29; goto f1
	tr10: cs = 29; goto f2
	tr14: cs = 29; goto f3
	tr19: cs = 29; goto f4
	tr23: cs = 29; goto f5
	tr28: cs = 29; goto f6
	tr32: cs = 29; goto f9
	tr39: cs = 29; goto f11
	tr40: cs = 29; goto f12
	tr41: cs = 29; goto f13
	tr42: cs = 29; goto f14
	tr48: cs = 29; goto f15
	tr50: cs = 29; goto f16
	tr52: cs = 29; goto f17
	tr54: cs = 29; goto f18
	tr55: cs = 29; goto f19
	tr56: cs = 29; goto f20
	tr33: cs = 30; goto _again
	tr34: cs = 31; goto _again
	tr35: cs = 32; goto _again
	tr36: cs = 33; goto f10
	tr37: cs = 34; goto _again
	tr47: cs = 35; goto _again
	tr49: cs = 36; goto _again
	tr51: cs = 37; goto _again
	tr53: cs = 38; goto _again
	tr38: cs = 39; goto _again

	f10: _acts = 5; goto execFuncs
	f19: _acts = 7; goto execFuncs
	f13: _acts = 9; goto execFuncs
	f14: _acts = 11; goto execFuncs
	f20: _acts = 13; goto execFuncs
	f12: _acts = 15; goto execFuncs
	f5: _acts = 17; goto execFuncs
	f2: _acts = 19; goto execFuncs
	f4: _acts = 21; goto execFuncs
	f1: _acts = 23; goto execFuncs
	f6: _acts = 25; goto execFuncs
	f3: _acts = 27; goto execFuncs
	f9: _acts = 29; goto execFuncs
	f18: _acts = 31; goto execFuncs
	f17: _acts = 33; goto execFuncs
	f16: _acts = 35; goto execFuncs
	f15: _acts = 37; goto execFuncs
	f11: _acts = 39; goto execFuncs
	f0: _acts = 41; goto execFuncs

execFuncs:
	_nacts = uint(_dw2md_actions[_acts]); _acts++
	for ; _nacts > 0; _nacts-- {
		_acts++
		switch _dw2md_actions[_acts - 1] {
		case 2:
// line 1 "NONE"

te = p+1

		case 3:
// line 22 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "======", "#",       itemHeading1}    }
		case 4:
// line 27 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "**", "**",          itemBold}        }
		case 5:
// line 28 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "//", "*",           itemItalic}      }
		case 6:
// line 29 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "__", "",            itemUnderline}   }
		case 7:
// line 30 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "''", "`",           itemMonospace}   }
		case 8:
// line 31 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "<del>", "~~",       itemStartDelete} }
		case 9:
// line 32 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "</del>", "~~",      itemEndDelete}   }
		case 10:
// line 37 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "<code>", "```",     itemStartCode}   }
		case 11:
// line 38 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "</code>", "```",    itemEndCode}     }
		case 12:
// line 39 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "<file>", "```",     itemStartFile}   }
		case 13:
// line 40 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, "</file>", "```",    itemEndFile}     }
		case 14:
// line 41 "scanner/dw_scanner.rl"

te = p+1
{ c <-item{ts, p, string(data[p]), "", itemText}        }
		case 15:
// line 23 "scanner/dw_scanner.rl"

te = p
p--
{ c <-item{ts, p, "=====", "##",       itemHeading2}    }
		case 16:
// line 24 "scanner/dw_scanner.rl"

te = p
p--
{ c <-item{ts, p, "====", "###",       itemHeading3}    }
		case 17:
// line 25 "scanner/dw_scanner.rl"

te = p
p--
{ c <-item{ts, p, "===", "####",       itemHeading4}    }
		case 18:
// line 26 "scanner/dw_scanner.rl"

te = p
p--
{ c <-item{ts, p, "==", "#####",       itemHeading5}    }
		case 19:
// line 41 "scanner/dw_scanner.rl"

te = p
p--
{ c <-item{ts, p, string(data[p]), "", itemText}        }
		case 20:
// line 41 "scanner/dw_scanner.rl"

p = (te) - 1
{ c <-item{ts, p, string(data[p]), "", itemText}        }
// line 561 "scanner/dw_scanner.go"
		}
	}
	goto _again

_again:
	_acts = int(_dw2md_to_state_actions[cs])
	_nacts = uint(_dw2md_actions[_acts]); _acts++
	for ; _nacts > 0; _nacts-- {
		_acts++
		switch _dw2md_actions[_acts - 1] {
		case 0:
// line 1 "NONE"

ts = 0

// line 577 "scanner/dw_scanner.go"
		}
	}

	if p++; p != pe {
		goto _resume
	}
	_test_eof: {}
	if p == eof {
		switch cs {
		case 30:
			goto tr39
		case 31:
			goto tr39
		case 32:
			goto tr39
		case 33:
			goto tr39
		case 0:
			goto tr0
		case 1:
			goto tr0
		case 2:
			goto tr0
		case 3:
			goto tr0
		case 4:
			goto tr0
		case 5:
			goto tr0
		case 6:
			goto tr0
		case 7:
			goto tr0
		case 8:
			goto tr0
		case 9:
			goto tr0
		case 10:
			goto tr0
		case 11:
			goto tr0
		case 12:
			goto tr0
		case 13:
			goto tr0
		case 14:
			goto tr0
		case 15:
			goto tr0
		case 16:
			goto tr0
		case 17:
			goto tr0
		case 18:
			goto tr0
		case 19:
			goto tr0
		case 20:
			goto tr0
		case 21:
			goto tr0
		case 22:
			goto tr0
		case 23:
			goto tr0
		case 24:
			goto tr0
		case 25:
			goto tr0
		case 26:
			goto tr0
		case 27:
			goto tr0
		case 28:
			goto tr0
		case 34:
			goto tr39
		case 35:
			goto tr48
		case 36:
			goto tr50
		case 37:
			goto tr52
		case 38:
			goto tr54
		case 39:
			goto tr39
	}
	}

	}

// line 48 "scanner/dw_scanner.rl"


	c <-item{0,0,"","",itemEOF}
}
